# clitest

./: .dockerignore  Dockerfile  README.md  pyproject.toml
clitest/: __main__.py
