[tool.poetry]
name = "clitest"
version = "0.1.0"
description = ""
authors = ["khan <khan.schroderturner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mytest = "clitest.__main__:main"